--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT = 5000
-CONNECTION_URL = 'mongodb+srv://Tsogt:UZGHqXbYKSYiu7Vg@mydb.vwlgrb8.mongodb.net/?retryWrites=true&w=majority'
+CONNECTION_URL = 'mongodb+srv://:@mydb.vwlgrb8.mongodb.net/?retryWrites=true&w=majority'
